fix: overflow rule

--- a/src/components/main/sidebar/favorites/styles.scss
+++ b/src/components/main/sidebar/favorites/styles.scss
@@ -9,7 +9,6 @@
   align-items: center;
   gap: 1rem;
   overflow-x: auto;
-  overflow-y: hidden;
   padding: 0 1rem;
 
   .favorites-item {
